tests/derive-tests/from/fail/struct.err.txt
error: expected `enum`
 --> /tests/derive-tests/from/fail/struct.rs:4:5
  |
4 | pub struct Struct {
  |     ^^^^^^
